# back_to_the_future

./: .gitignore  CMakeLists.txt  README.md  archiver.cpp  archiver.h  explorer.cpp  explorer.h  iconv_install  logs.h  main.cpp  status.h
debug/: BTTF  CMakeCache.txt  Makefile  cmake_install.cmake  tests
debug/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
inc/: IExplorer.h  ILibarchive_wrapper.h  archiver.h  explorer.h  libarchive_wrapper.h  logs.h
src/: CMakeLists.txt  archiver.cpp  explorer.cpp  libarchive_wrapper.cpp  logs.cpp  main.cpp  test_main.cpp
test/: CMakeLists.txt  test.cpp
tests/: CMakeLists.txt  test.cpp  test_archiver.cpp  test_explorer.cpp
